<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityLogin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="@dimen/Text_header_size"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:elevation="4dp"/>
        <EditText
            android:background="@color/Gainboro"
            android:padding="@dimen/padding_interno_botao"
            android:id="@+id/Edit_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Edit_Email"
            android:layout_marginTop="@dimen/margin_edit_top"
            android:textSize="@dimen/text_size_edit"
            android:inputType="textEmailAddress"
            android:elevation="4dp"/>
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
        <EditText
            android:background="@color/Gainboro"
            android:padding="@dimen/padding_interno_botao"
            android:id="@+id/Edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Edit_Senha"
            android:layout_marginTop="@dimen/margin_edit_top"
            android:textSize="@dimen/text_size_edit"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:elevation="4dp"
            />

        </LinearLayout>

        <TextView
            android:id="@+id/Clique_cadastro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Criar_conta"
            android:clickable="true"
            android:textColor="@color/design_default_color_primary"
            android:focusable="true"
            android:textSize="@dimen/text_size"
            />
        <TextView
            android:id="@+id/esqueci_senha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:focusable="true"
            android:textSize="@dimen/text_size"
            />

        <Button
            android:id="@+id/Button_enviar"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/Button_text"
            android:text="@string/Button_enviar"
            android:background="@drawable/buttons"

            />

    </LinearLayout>


</LinearLayout>